我是刘谢霞

--- a/文件上传/file.html
+++ b/文件上传/file.html
@@ -18,7 +18,7 @@
             console.log(e.target.files);
             var one =e.target.files[0];
             if(!/image/.test(one.type)){
-               alert('请上传图片');
+               alert('请上传图片啊');
                return;
             }
             var fr=new FileReader();
