转成树结构的算法

--- a/myExercise/1.html
+++ b/myExercise/1.html
@@ -70,6 +70,10 @@
     <div class="ys ">国内版1</div>
     <embed src="./search.svg" style="display:block;width:30px;height:30px" />
       
+
+    <div class="">
+        <div style="display:inline-block;width:100px;height:100px;border-radio:50%;border:10px solid pink;"></div>
+    </div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script>
