--- a/算法学习/转成树结构.html
+++ b/算法学习/转成树结构.html
@@ -182,7 +182,7 @@
             }
         }
     }
-  
+    // 缺陷、id决定不能相同，不然肯定有问题
     function changeToTree(RSdata, id, pid) {
         //为防止破缘原数组，从新复制一遍
        
