不要上下抖动

--- a/myExercise/1.html
+++ b/myExercise/1.html
@@ -79,7 +79,7 @@
             background-position-x: -364px;
             position: absolute;
             top: -5px;
-            animation: mymove 10s infinite linear, mymove1 2s infinite linear;
+            animation: mymove 10s infinite linear;
             /* -96 */
         }
         @keyframes mymove{
