css 代码规范总结

--- a/算法学习/转成树结构.html
+++ b/算法学习/转成树结构.html
@@ -7,9 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-
+<style>
+    .flex{
+        display: flex;
+    }
+    .one{
+        background: pink
+    }
+    .two{
+        background-color: #ddd
+    }
+</style>
 <body>
-
+    <div class="flex">
+        <div class="one"></div>
+        <div class="two" style="height:50rem"></div>
+        <input type="text" >
+    </div>
 </body>
 
 <script>
