学习设计模式

--- a/javaScript设计模式/1.html
+++ b/javaScript设计模式/1.html
@@ -85,3 +85,94 @@ var factory = function(){
 }
 
 5. 外观模式
+
+模式作用: 
+1.在设计初期，设计应该有意识的将不同的两个层分离，比如经典的三层结构。
+2.在开发阶段，子系统往往因为不断的重构演化而变得越来越复杂，增加外端F可以
+提供一个简单的接口，减少他们之间的依赖。
+3.在维护一个遗留的大型系统时，为系统开发一个外观Facade类，为设计粗糙和高度复杂的遗留代码
+提供比较清晰的接口，让新系统和Facade对象交互。
+注意事项：
+1.外观模式被开发者连续使用时会产生一定的性能问题，因为在每次调用时都要检测功能的
+可能性。
+
+6. 代理模式
+模式作用:
+    1.远程代理(一个对象将不同空间的对象进行局部代理)
+    2.虚拟代理（根据需要创建开销开大的对象如渲染网页暂时用站位代替真图）
+    3.安全代理(控制真实对象的访问权限)
+    4.智能指引（调用对象代理处理另外一些事情如垃圾回收机制）
+注意事项:
+    1.不能滥用代理，有时候仅仅是代码增加复杂度。
+
+7.代理模式（发布订阅模式）
+ 
+模式作用：
+1.支持简单的广播通信，自动通知所有已经订阅过的对象。
+2.页面载入后目标对象很容易与观察者存在一种动态关联，增加灵活性。
+3.目标对象与观察者之间的抽象耦合关系能够单独扩展以及重用。
+
+注意事项：
+1.监听要在触发前。
+
+8.策略模式
+模式作用:
+1.所有的这些算法都是做相同的事情，只是实现不同。
+2.以相同的方式调用所有的方法，减少了各种算法类与算法类之间的耦合。
+3.单独定义算法类，也方便了单元测试。
+注意事项:
+1，不仅仅可以封装算法了，也可以用来封装几乎任何类型的规则，是要在分析过程
+中需要在不同时间应用不同的业务规则，就可以考虑时要用策略模式来处理各种变化。
+
+9.命令模式
+1.将函数的封装，请求，调用结合为一体
+2.调用具体的函数解耦命令对象与接收对象。
+3.提高程序模块化的灵活性。
+
+注意 事项：
+1.不需要接口一致，直接调用函数即可，以避免造成浪费。
+
+10.迭代器模式
+模式作用
+1.为遍历不同的集合结构提供一个统一接口，从而支持同样的算法在不同的集合结构上进行炒作。
+2.对于集合内部结果常常变化各异，我们不想暴露去内部结构的话,但是又想响应客户
+代码透明底访问其中的元素，这种情况下我们可以使用迭代器模式
+注意事项：
+1.一般的迭代器，我们至少要有两个方法，hasNext(),Next()。这样子才做到遍历所有对象
+2.遍历的同事迭代器所在的集合结构可能会导致问题（比如删除操作）
+
+11.职责链模式
+
+模式作用：
+1.dom 的冒泡有类似职责链
+2.node 当controller中有很多负责操作逻辑的时候拆分中间件。
+3.解耦发送者和接受者
+注意事项：
+1.JavaScript中的每一次[.]是有代价的，要在必要的时候时候用。
+
+
+12.适配器模式
+
+模式作用
+
+注意事项
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
