--- a/列表拖拽/2.html
+++ b/列表拖拽/2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>可排序小部件（Sortable Widget）演示</title>
-  <link rel="stylesheet" href="http://apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
+  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 </head>
