--- a/列表拖拽/2.html
+++ b/列表拖拽/2.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>可排序小部件（Sortable Widget）演示</title>
-  <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="http://apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
+  <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 </head>
 <style>
@@ -37,10 +38,8 @@ width:100px;
 </ul>
  <div>
 	<img id='show' src='./5.png' style='    width: 100%;' value='1'/>
-   <input type='text' value="444">
-   <div id="wzy"></div>
+	 <input type='text' value="444">
  <div>
-   
 <script>
 $("#sortable").sortable({
   stop: function( event, ui ) {
@@ -58,13 +57,6 @@ $("#sortable li").on('mouseleave','img',function(){
 		
 })
 
-$.ajax({
-  url:'https://www.easy-mock.com/mock/5a56cf0b55fb93147c5911e7/example/api/ce',
-  type:'get',
-  success:function(d){
-      $('#wzy').text(d.data.data)
-  }
-})
 </script>
  
 </body>
