刘谢霞测试

--- a/列表拖拽/2.html
+++ b/列表拖拽/2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>可排序小部件（Sortable Widget）演示</title>
+  <title>可排序小部件（Sortable Widget）演示1</title>
   <link rel="stylesheet" href="http://apps.bdimg.com/libs/jqueryui/1.10.4/css/jquery-ui.min.css">
   <script src="http://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
