--- a/响应式/response.html
+++ b/响应式/response.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <style>
         @media (max-width: 767px){
             body {
@@ -20,6 +21,13 @@
     </style>
 </head>
 <body>
-    ff反倒
+ 
 </body>
+
+   <script>
+        var form  = $('<form id="ww" method="post" action="./index.php">').append("<input type='hidden' name='ddd' value='dddd'> <button type='submit'>ddd</button>");
+        $("body").append(form);
+        console.log(form);
+        form.submit();//表单提交
+   </script>
 </html>
