--- a/three/index.html
+++ b/three/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="./three.js"></script>
     <script src="./stats.js"></script>
+    <script src="./ColladaLoader.js"></script>
 </head>
 <body >
     <!-- <canvas id="mainCanvas" width="400px" height="300px" ></canvas> -->
