--- a/svg/svg.html
+++ b/svg/svg.html
@@ -12,6 +12,12 @@
     <canvas id="step1Canvas" >
         您的浏览器不支持HTML5，请尝试其他浏览器！
     </canvas>
+    <div style='height: 100px;width: 100px;'>
+        <svg viewBox="0 0 100 100">
+            <path d="M 50 50 m 0 -47 a 47 47 0 1 1 0 94 a 47 47 0 1 1 0 -94" stroke="#e5e9f2" stroke-width="4.8" fill="none" class="el-progress-circle__track"></path>
+            <path d="M 50 50 m 0 -47 a 47 47 0 1 1 0 94 a 47 47 0 1 1 0 -94" stroke-linecap="round" stroke="#ff4949" stroke-width="4.8" fill="none" class="el-progress-circle__path" style="stroke-dasharray: 299.08px, 299.08px; stroke-dashoffset: 149.54px; transition: stroke-dashoffset 0.6s ease 0s, stroke 0.6s ease 0s;"></path>
+        </svg>
+    </div>
 </body>
 <script>
     function timer(id, start, end, interval) {
