--- a/1.html
+++ b/1.html
@@ -1,32 +1,26 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Hls.js demo - basic usage</title>
+    <title>Qiniu Web Player in HTML5</title>
 </head>
+<link href="http://sdk-release.qnsdk.com/qiniuplayer-0.3.9.min.css" rel="stylesheet">
+<script src="http://sdk-release.qnsdk.com/qiniuplayer-0.3.9.min.js"></script>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <h1>Hls.js demo - basic usage</h1>
-    <video height="600" id="video" controls></video>
-
-
-
+    <h1>Qiniu Web Player</h1>
+    <video id="demo-video" class="video-js vjs-big-play-centered"></video>
 </body>
 <script>
-    if (Hls.isSupported()) {
-        var video = document.getElementById('video');
-        var hls = new Hls();
-        hls.loadSource('https://qiniustatic.wodidashi.com/audio/71459aba-9e95-4e8e-a402-2beec43aae03.amr?avvod/m3u8');
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, function () {
-            video.play();
-        });
-    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = 'https://video-dev.github.io/streams/x36xhzz/x36xhzz.m3u8';
-        video.addEventListener('canplay', function () {
-            video.play();
-        });
-    }
+    var options = {
+        controls: true,
+        url: 'https://qiniustatic.wodidashi.com/audio/6yGVlZO1atTn1?avvod/m3u8',
+        type: 'hls',
+        swf:true,
+        preload: true,
+        autoplay: true // 如为 true，则视频将会自动播放
+    };
+    var player = new QiniuPlayer('demo-video', options);
 </script>
 
 </html>
