--- a/popper/choujiang.html
+++ b/popper/choujiang.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./less.css">
+    <link rel="stylesheet" href="./scss.css">
+    <style>
+        .div{
+            transform: translate(100px,100px);
+        }
+    </style>
 </head>
 <body>
 
-    <img id='div' src="./img/reward.png" alt="">
+    <div class='div'>
+        <img id='div' src="./img/reward.png" alt="">
+    </div>
 </body>
 <script>
 var tt = document.querySelector('#div');
