--- a/swiper/index.html
+++ b/swiper/index.html
@@ -87,6 +87,7 @@
     width: window.innerWidth,
     loopAdditionalSlides: 3,
     loop: true,
+    antoplay:3000,
     centeredSlides: true,
     on: {
       transitionEnd: function () {
