--- a/canvas/study/index1.html
+++ b/canvas/study/index1.html
@@ -37,11 +37,11 @@
     // [200,100],
     // [,100],
     var path = [
-        [100, 100],
-        [100, 200],
-        [200, 200],
-        [200, 100],
-        [100, 100]
+        // [100, 100],
+        // [100, 200],
+        // [200, 200],
+        // [200, 100],
+        // [100, 100]
     ]
     path.forEach((arr, index) => {
         // console.log(path[index+1]);
@@ -101,15 +101,15 @@
     // function step(params) {
     //     console.log(2)
     // }
-    // brush.moveTo(100,100);   
-    // // brush.lineTo(200,200);
-    // // brush.lineTo(300,100);
+    brush.moveTo(100,100);   
+    brush.lineTo(200,200);
+    brush.lineTo(300,100);
     // brush.quadraticCurveTo(
     //     200,200,
     //     150,150
     // );
-    // brush.stroke();
-    // brush.closePath();
+    brush.stroke();
+    brush.closePath();
     // brush.moveTo(200,200);
     // brush.quadraticCurveTo(
     //     300,100,
