--- a/canvas/study3/index.html
+++ b/canvas/study3/index.html
@@ -22,8 +22,8 @@
 <script>
         //canvas 中 sava(), restore() 方法的使用
          var canvas = document.getElementById('canvas');
-         canvas.width = window.innerWidth
-         canvas.height = window.innerHeight
+         canvas.width = window.innerWidth;
+         canvas.height = window.innerHeight;
          var brush = canvas.getContext('2d');
        
         brush.save(); //保存当前状态
